<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LoginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:orientation="vertical"
    tools:context=".LoginActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/imgLogo"
                    android:layout_width="140sp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="80sp"
                    android:layout_marginBottom="10sp"
                    android:src="@drawable/logo"/>

                <EditText
                    android:id="@+id/edtUserName"
                    android:layout_width="220sp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imgLogo"
                    android:layout_marginStart="90sp"
                    android:layout_marginTop="20sp"
                    android:layout_marginEnd="20sp"
                    android:background="@color/hint"
                    android:drawableStart="@drawable/person"
                    android:drawablePadding="20sp"
                    android:hint="@string/edtUsername"
                    android:inputType="textPersonName"
                    android:padding="20sp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:autofillHints="username"/>

                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/edtUserName"
                    android:layout_marginStart="90sp"
                    android:layout_marginTop="20sp"
                    android:layout_marginBottom="20sp"
                    android:autofillHints="password"
                    android:background="@color/hint"
                    android:drawableStart="@drawable/security"
                    android:drawablePadding="20sp"
                    android:hint="@string/edtPassword"
                    android:inputType="textPassword"
                    android:padding="20sp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/edtPassword"
                    android:layout_centerHorizontal="true"
                    android:width="140sp"
                    android:layout_marginStart="10sp"
                    android:layout_marginTop="10sp"
                    android:layout_marginEnd="10sp"
                    android:layout_marginBottom="10sp"
                    android:text="@string/btnLogin"
                    android:textSize="20sp"
                    android:textColor="@color/white"/>

                <Button
                    android:id="@+id/btnSkip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btnLogin"
                    android:layout_centerHorizontal="true"
                    android:width="140sp"
                    android:layout_marginStart="10sp"
                    android:layout_marginTop="10sp"
                    android:layout_marginEnd="10sp"
                    android:layout_marginBottom="10sp"
                    android:text="@string/btnSkip"
                    android:textSize="20sp"
                    android:textColor="@color/white"/>

                <!--                <TextView-->
                <!--            android:id="@+id/txtForgotPassword"-->
                <!--            android:layout_width="wrap_content"-->
                <!--            android:layout_height="wrap_content"-->
                <!--            android:layout_below="@+id/btnSkip"-->
                <!--            android:layout_centerHorizontal="true"-->
                <!--            android:layout_margin="10dp"-->
                <!--            android:textStyle="bold"-->
                <!--            android:textSize="18dp"-->
                <!--            android:text="@string/txtForgotPassword"-->
                <!--            android:textColor="@color/teal_700" />-->



        </RelativeLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>